--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,8 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  padding: 0rem;
   font-weight: normal;
 }
 
@@ -24,12 +23,14 @@ a,
 @media (min-width: 1024px) {
   body {
     display: flex;
-    place-items: center;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    padding: 0;
   }
+}
+html, body, #app {
+  height: 100%;
+  margin: 0; /* 清除默认外边距，避免滚动条 */
+  padding: 0; /* 清除默认内边距 */
 }
